# MC-AI

./: .gitignore  README.md
python_brain/: requirements.txt  server.py  swarm_pb2.py  swarm_pb2_grpc.py
rust_core/: Cargo.toml  build.rs
rust_core/src/: bot.rs  grpc_client.rs  main.rs
shared/: swarm.proto
